added guest speaker

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -12,7 +12,7 @@
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="fonts/font.css" rel="stylesheet" type="text/css">
         <link href="vendor/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css"/>
-        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -72,6 +72,7 @@
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li id = 'home' class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Home</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">About</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#guest">Guest Speaker</a></li>
                                 <li class="js_nav-item nav-item large-screen"><a class="nav-item-child nav-item-hover" href="#events">Events</a></li>
                                 <li class="js_nav-item nav-item small-screen"><a class="nav-item-child nav-item-hover" href="#eventsSmall">Events</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#products">Reverberations</a></li>
@@ -121,9 +122,11 @@
             </div>
             <div class="item">
               <img src="img/imagesforwebsite/6.jpg" alt="...">
-              <!-- <div class="carousel-caption">
-                ...
-              </div> -->
+              <div class="carousel-caption">
+                Success to me is about Vision. It is the ability to rise above the immediacy of pain. It is about imagination. It is about sensitivity to small people. It is about building inclusion. It is about connectedness to a larger world existence. It is about personal tenacity. It is about giving back more to life than you take out of it. It is about creating extra-ordinary success with ordinary lives. It is about delivering fast and at cost effective way. It is about saving resources. And a person with vast experience of life, I am sure I can see light through the Central Theme [Tenets of Progressivism: Inclusion, Education and Digitalization] that you have chosen for this summit.
+                Through your Central theme, I can see Dreams and goals that seek to awaken the potential within you and provide requisite direction to it. Selection of an AIM and maintaining it is a fundamental principle of war and is equally applicable to life. Now that you have the theme, possess your goals, harness positive attitude and thoughts and perseverance and <strong>on going on.</strong> “Make failure your teacher…” Do not confuse yourself with the goals and the means. Never look at a hindrance and stop thinking but choose an alternative while keeping the goal intact in mind and <strong> on going on.</strong><br />
+                --- <strong>Sri L.K. Malhotra, GM, Punjab National Bank ( Chief Guest )</strong>
+              </div>
             </div>
             <div class="item">
               <img src="img/imagesforwebsite/10.jpg" alt="...">
@@ -256,11 +259,39 @@
                     <span style = 'color: black' class='past-highlights-info'> 15+ Events </span>
                   </div>
                 </div>
-
               </div>
             </div>
         </div>
         <!-- End About -->
+
+        <!-- Guest -->
+        <div id = 'guest' class='large-screen' style='margin-top:10px'>
+          <div class="content-lg container margin-b-10" style='margin-top:-90px;width:100%'>
+            <div class="row margin-b-40" style="margin-left:40px;">
+                <div class="col">
+                    <h2>CHIEF GUEST - SRI L K MALHOTRA, GM, PNB</h2>
+                </div>
+            </div>
+            <div class='guest-speech margin-b-40' style="margin-left:40px;">
+              <div id='read-short'> Dear Mr. Biju Paul Abraham -Dean Academic & acting Director of IIMC,  Mr Rajesh Bhattacharya - Chairman of Student Council   & dear students of the Indian Institute of Management, Kolkata.  
+              It gives me pleasure to address you on behalf of a great Bank that is Punjab National Bank. PNB is well associated with this great Management School mainly as lender of Education Loans to the students. 
+              We have embraced the students here not only to seek business avenues but also to be proud to be associated to the future leaders of India. 
+              We have benefitted more than 275 students by way of sanctioning Education Loan worth more than 60 Crores in the last three years and shall continue to do so in coming years and with care, all due care. We have so far made the process of giving loans cheap, simple, hassle free and with such standard of service where services reach the students here in the campus, rather than student going to our branches.
+              But today, I am not here to count figures but I am here to witness and to be part of the 30th Annual B-School Summit of IIMC, to be with you students and to share some cherished moments. 
+              Therefore, it gives me special pleasure to address you here in IIMC. You - the students of 53rd and 54th batch – represent different parts of India.</div> <div id='read-more-link'>... Read More </div> <div id='read-more'>  Literally, the IIMC is where India meets.
+              I trust, in this three day Summit, the Indian Institute of Management will be energized by your voices and your perspectives. Yes, the IIMC boasts superb leaders and teachers. But your own contribution to the learning environment remains essential. Students from various parts are coming for different learning events.  Leave an imprint. Expose your views. Let your voice being heard in the debates and workshops.
+              Central theme of your Summit is ‘Tenets of Progressivism: Inclusion, Education and Digitalization'. Do you know how close is this theme to the heart of Banking these days? PNB too supports for advocacy of social reforms through Financial Inclusion, facilitating Education to all and Digitalization of delivery channels. Therefore, as a Banker that I am, your central theme is close to my heart also.
+              As I have said, this Summit is a convergence of India, the best brains of India. The exchange of ideas, the fostering of understanding across geographical and cultural divides is of the essence. It helps in perceiving opportunities, creating more opportunities. But we are also living in a time, rife with conflicts and challenges. More than ever do we need knowledge and awareness of the threats and opportunities that lie ahead of us. More than ever we need leaders who can sail us through the challenges and to create opportunities. And I see you as the leaders of future. And I see you as the torchbearers of the Central theme of this summit.
+              In your path of glory, you may come across roadblocks. Overcome them and go ahead. Discuss, agree and disagree. Through the convergence of divergent brains in this Summit and many more summits like this in future, through sharing of ideas and forming new ideas, I am sure you shall succeed in being the future leaders of India. India is looking at your success. 
+              Success to me is about Vision. It is the ability to rise above the immediacy of pain. It is about imagination. It is about sensitivity to small people. It is about building inclusion. It is about connectedness to a larger world existence. It is about personal tenacity. It is about giving back more to life than you take out of it. It is about creating extra-ordinary success with ordinary lives. It is about delivering fast and at cost effective way. It is about saving resources. And a person with vast experience of life, I am sure I can see light through the Central Theme that you have chosen for this summit.
+              Through your Central theme, I can see Dreams and goals that seek to awaken the potential within you and provide requisite direction to it. Selection of an AIM and maintaining it is a fundamental principle of war and is equally applicable to life. Now that you have the theme, possess your goals, harness positive attitude and thoughts and perseverance and go on going on. “Make failure your teacher…” Do not confuse yourself with the goals and the means. Never look at a hindrance and stop thinking but choose an alternative while keeping the goal intact in mind and go on going on.
+              I shall be happy if you be our ambassadors in our journey and it would be our glory someday when you become our leader in PNB.
+              Thank you very much. I wish the Summit great success and good luck and God’s speed. </div>
+              <div id='read-less-link'> Read Less </div>
+            </div>
+          </div>
+        </div>
+        <!-- Guest -->
 
         <!-- Events Large Screen-->
         <div id = 'events' class='large-screen' style='margin-top:10px'>
@@ -2091,6 +2122,18 @@
         <script type="text/javascript" src="js/jquery.slicebox.js"></script>
 
         <script type="text/javascript">
+
+          $('#read-more-link').click(function() {
+            $('#read-less-link').css('display', 'block')
+            $('#read-more').css('display', 'block')
+            $('#read-more-link').css('display', 'none')
+          })
+
+          $('#read-less-link').click(function() {
+            $('#read-more-link').css('display', 'block')
+            $('#read-more').css('display', 'none')
+            $('#read-less-link').css('display', 'none')
+          })
 
           $('#headingOne').click(function() {
                 $('#slide-img').attr('src','img/slide_image/intag_history.jpg')
